// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GiftGrid/> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    Hola mundo
  </h3>
  <p
    className="animate__animated animate__fadeIn"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GiftGrid/> Dede de mostrar items cuando se cargan imagenes useFetchGifs  1`] = `
<Fragment>
  <h3>
    Hola mundo
  </h3>
  <div
    className="card-grid"
  >
    <GiftGridItem
      id="1"
      key="1"
      title="test.gif"
      url="gift.gif"
    />
  </div>
</Fragment>
`;
